--- a/app/assets/stylesheets/manual.scss
+++ b/app/assets/stylesheets/manual.scss
@@ -142,7 +142,7 @@
     justify-content: center;
     align-items: center;
     padding: 15px;
-    background: #e6e6e6;
+    background: #ffffff;
     
   }
   
