--- a/app/views/slideshow/slideshow.html.erb
+++ b/app/views/slideshow/slideshow.html.erb
@@ -4,15 +4,28 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {box-sizing: border-box;}
-body {font-family: Verdana, sans-serif;}
+body {
+  font-family: Verdana, sans-serif;
+  padding: 0px
+
+}
 .mySlides {display: none;}
-img {vertical-align: middle;}
+
+img {
+    max-width: 100%;
+    height: auto;
+    width: auto;
+}
 
 /* Slideshow container */
-.slideshow-container {
+#slideshow .slideshow-container {
   position: center;
   margin: auto;
 }
+#slideshow .slideshow-container a{
+  position: fixed;
+}
+
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
@@ -34,23 +47,19 @@ img {vertical-align: middle;}
   to {opacity: 1}
 }
 
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .text {font-size: 11px}
-}
 </style>
 </head>
 <body>
-
+<div id="slideshow">
 <div class="slideshow-container" style="text-align:center">
 <%@flayers.each do |flayer|%>
-<div class="mySlides fade">
+<div class="mySlides fade" >
   <%=image_tag(flayer.image)%>
 </div>
 <%end%>
 </div>
-<br>
 
+<br>
 <script>
 var slideIndex = 0;
 showSlides();
