--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,8 @@
   <div class="container-fluid">
   <a class="navbar-brand" href="/">REDLAB</a>
   <ul class="navbar-nav ml-auto">
-    <li class="nav-item">
-    <a class="nav-link" href="/flayers">Administrar Flayers</a></li>
     <% if signed_in? %>
-      <a class="nav-link" href="/records">Registros</a></li>
+      <a class="nav-link" href="/laboratories">Registros</a></li>
        <li class="nav-item">
       <a class="nav-link" href="/students">Estudiantes</a></li>
        <li class="nav-item dropdown">
@@ -36,6 +34,8 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown2" style="background-color: #fdb515;">
       <a class="dropdown-item"  href="/laboratories">Administrar Labs</a>
       <a class="dropdown-item" href="/admin/users">Administrar Usuarios</a>
+      <a class="dropdown-item" href="/flayers">Administrar Flayers</a></li>
+
       <% end %>
       </li>
       <%= link_to "Cerrar Laboratorio", button_path, method: :get ,:class =>"btn navbar-btn btn-danger" %>
