--- a/app/views/visits/new.html.erb
+++ b/app/views/visits/new.html.erb
@@ -7,7 +7,7 @@
 					Registro Manual y Visitas
 				</span>
                 <p>
-                Personas que estén registradas en el sistema y no porten su TUC ingresar solamente el RUN
+                Personas que estén registradas en el sistema y no porten su TUC ingresar solamente el RUN y Laboratorio.
                 </p>
 				<div class="wrap-input100">
 					<span class="label-input100">Ingrese RUN *</span>
@@ -15,7 +15,7 @@
 				</div>
 				<div class="wrap-input100 bg1">
 					<span class="label-input100">Insitución que pertenece</span>
-					<input class="input100" id="institution" type="text" name="institution" placeholder="ej: Universidad Católica">
+					<input class="input100" id="institution" type="text" name="institucion" placeholder="ej: Universidad Católica">
 				</div>
 				<div class="wrap-input100 input100-select bg1">
 					<span class="label-input100">Laboratorio</span>
@@ -45,11 +45,11 @@
 				</div>
                 <div class="wrap-input100 bg1" id="otro-motivo">
 					<span class="label-input100">Otro</span>
-					<input class="input100" id="otro" type="text" placeholder="ej: Consulta por maquinaria">
+					<input class="input100" id="otro" type="text" name="other" placeholder="ej: Consulta por maquinaria">
 				</div>
                 <div class="wrap-input100 bg1" id="contador">
 					<span class="label-input100">Cuantas personas son</span>
-					<input class="input100" type="text" id="counter" placeholder="ej: 15">
+					<input class="input100" type="text" id="counter" name="quantity"placeholder="ej: 15">
 				</div>
 				<div class="container-contact100-form-btn">
 					<button class="contact100-form-btn">
