--- a/app/views/flayers/_form.html.erb
+++ b/app/views/flayers/_form.html.erb
@@ -22,6 +22,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit "Subir flayer", :class =>"btn-primary"%>
+    <%= form.submit "Subir flayer", :class =>"btn btn-primary"%>
   </div>
 <% end %>
