--- a/app/views/visits/new.html.erb
+++ b/app/views/visits/new.html.erb
@@ -2,21 +2,33 @@
 <body>
 	<div class="container-contact100">
 		<div class="wrap-contact100">
-			<form class="contact100-form" action="/visits" method="post">
+
+
+			<form class="contact100-form" action="/visits" method="post" id="visitForm">
+
+
 				<span class="contact100-form-title">
 					Registro Manual y Visitas
 				</span>
                 <p>
                 Personas que estén registradas en el sistema y no porten su TUC ingresar solamente el RUN y Laboratorio.
                 </p>
+
 				<div class="wrap-input100">
 					<span class="label-input100">Ingrese RUN *</span>
-					<input class="input100" id="run" type="text" name="rut" placeholder="Con guion ej: 12345678-9" required oninput="checkRut(this)">
+					<input class="input100" id="run" type="text" name="rut" placeholder="Sin guion ej: 123456780">
+					<span class="label-input100" style="color:yellow;" id="lenghtError" hidden>RUN ingresado es demasiado corto</span>
+					<span class="label-input100" style="color:red;" id="invalidError" hidden>RUN ingresado es invalido</span>
 				</div>
+
+
+
 				<div class="wrap-input100 bg1">
 					<span class="label-input100">Insitución que pertenece</span>
 					<input class="input100" id="institution" type="text" name="institucion" placeholder="ej: Universidad Católica">
 				</div>
+
+
 				<div class="wrap-input100 input100-select bg1">
 					<span class="label-input100">Laboratorio</span>
 					<div>
@@ -28,6 +40,8 @@
 						<div class="dropDownSelect2"></div>
 					</div>
 				</div>
+
+
 
 				<div class="wrap-input100 input100-select bg1">
 					<span class="label-input100">Motivo de visita </span>
@@ -43,27 +57,101 @@
 						<div class="dropDownSelect2"></div>
 					</div>
 				</div>
+
+
                 <div class="wrap-input100 bg1" id="otro-motivo">
 					<span class="label-input100">Otro</span>
 					<input class="input100" id="otro" type="text" name="other" placeholder="ej: Consulta por maquinaria">
 				</div>
+
+
                 <div class="wrap-input100 bg1" id="contador">
 					<span class="label-input100">Cuantas personas son</span>
 					<input class="input100" type="text" id="counter" name="quantity"placeholder="ej: 15">
 				</div>
+
+
 				<div class="container-contact100-form-btn">
-					<button class="contact100-form-btn">
+					<button class="contact100-form-btn" type="submit" id="button">
 						<span>
 							Ingresar
 							<i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
 						</span>
 					</button>
 				</div>
+
+
 			</form>
 		</div>
 	</div>
 </body>
 </html>
+
+
+<script>
+const visitForm = document.getElementById('visitForm');
+const runField = document.getElementById('run');
+const okButton = document.getElementById('button');
+  
+runField.addEventListener('focusout', function (event) {
+  isValidRun = checkRut(runField);
+  if ( isValidRun == 1 ) {
+	console.log("run chico")
+	runField.setCustomValidity('RUT Incompleto');
+	console.log(runField.checkValidity())
+	okButton.disabled = true;
+  
+  } else if(isValidRun == 2) {
+	console.log("run invalido")
+	runField.setCustomValidity('RUT Inválido');
+    okButton.disabled = true;
+  } else {
+	console.log("run weno")
+	runField.setCustomValidity('');
+	okButton.disabled = false;
+  }
+});
+  
+okButton.addEventListener('click', function (event) {
+  visitForm.submit();
+});
+
+function checkRut(rut) {
+	var valor = rut.value.replace('.','');
+	
+    valor = valor.replace('-','');
+	cuerpo = valor.slice(0,-1);
+	
+    dv = valor.slice(-1).toUpperCase();
+
+    rut.value = cuerpo + '-'+ dv
+
+    if(cuerpo.length < 7) { return 1;}
+    
+    suma = 0;
+    multiplo = 2;
+    
+    for(i=1;i<=cuerpo.length;i++) {
+    
+        index = multiplo * valor.charAt(cuerpo.length - i);
+        
+        suma = suma + index;
+        
+        if(multiplo < 7) { multiplo = multiplo + 1; } else { multiplo = 2; }
+  
+    }
+    
+    dvEsperado = 11 - (suma % 11);
+    
+    dv = (dv == 'K')?10:dv;
+    dv = (dv == 0)?11:dv;
+    
+    if(dvEsperado != dv) { return 2; }
+    
+}
+</script>
+
+
 
 <script>
 $(document).ready(function() {
@@ -92,7 +180,7 @@ $('#run')
 				'1 2 3 ',
 				'4 5 6 ',
 				'7 8 9 ',
-                '{bksp} 0 -' 
+                '{bksp} 0 K' 
             ],   
         }, 
 	});
