--- a/app/views/laboratories/index.html.erb
+++ b/app/views/laboratories/index.html.erb
@@ -9,7 +9,8 @@
       <th scope="col">Nombre</th>
       <th scope="col">Facultad</th>
       <th scope="col">Campus</th>
-      <th colspan="3"></th>
+      <th scope="col">Acciones</th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 <% if can? :manage, Laboratory %>
