revisar lógica de entrada y salida de records. matricula corregida.

--- a/app/views/laboratories/show.html.erb
+++ b/app/views/laboratories/show.html.erb
@@ -21,7 +21,7 @@
 <%usuarios = activos-inactivos%>
 <h5>Usuarios en laboratorio:
 <%if usuarios < 0%>
-<%=0 %> <%="Redundancias de salidas"%></h4>
+<%=usuarios %> <%="Redundancias de salidas"%></h4>
 <%else%>
 <%=activos-inactivos%></h5>
 <%end%>
