--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<h2>información estudiante </h2>
+<h2>Información estudiante </h2>
  <table class="table">
   <thead>
     <tr>
