--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,51 +1,52 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>APPRegister</title>
+    <title>RED DE LABORATORIOS</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
 
-  <body>
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #fdb515;">
-  <div class="container-fluid">
-  <a class="navbar-brand" href="/">REDLAB</a>
-  <ul class="navbar-nav ml-auto">
-    <% if signed_in? %>
-      <a class="nav-link" href="/laboratories">Registros</a></li>
-       <li class="nav-item">
-      <a class="nav-link" href="/students">Estudiantes</a></li>
-       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Más
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: #fdb515;">
-          <a class="dropdown-item" href="/visits">Visitas</a>
-          <a class="dropdown-item" href="/students/new">Inscribir Estudiante</a>
-        </div>
-      </li>
-      <% if can? :manage, Laboratory %>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Admin
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown2" style="background-color: #fdb515;">
-      <a class="dropdown-item"  href="/laboratories">Administrar Labs</a>
-      <a class="dropdown-item" href="/admin/users">Administrar Usuarios</a>
-      <a class="dropdown-item" href="/flayers">Administrar Flayers</a></li>
-
-      <% end %>
-      </li>
-      <%= link_to "Cerrar Laboratorio", button_path, method: :get ,:class =>"btn navbar-btn btn-danger" %>
-        <% else %>
-          <%= link_to "Ingresar", new_user_session_path , :class =>"btn btn-outline-secondary"%>
-       <% end %>
-    </ul>  
-</div>
-</div>
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top nav-bar-blue">
+    <div class="container-fluid">
+      <a class="navbar-brand"  href="/"><%= image_tag "BRAND.png" %></a>
+      <ul class="navbar-nav ml-auto">
+        <% if signed_in? %>
+          <li class="nav-item">
+            <a class="nav-link nav-link-medium active" href="/laboratories">Registros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link nav-link-medium active" href="/students">Estudiantes</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle nav-link-medium active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Más</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/visits">Visitas</a>
+              <a class="dropdown-item" href="/students/new">Inscribir Estudiante</a>
+            </div>
+          </li>
+          <% if can? :manage, Laboratory %>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle nav-link-medium active" href="#" id="navbarDropdown2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Admin
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+                <a class="dropdown-item"  href="/laboratories">Administrar Labs</a>
+                <a class="dropdown-item" href="/admin/users">Administrar Usuarios</a>
+                <a class="dropdown-item" href="/flayers">Administrar Flayers</a>
+              </div>
+            </li>
+          <% end %>
+            <%= link_to "Cerrar Laboratorio", button_path, method: :get ,:class =>"btn navbar-btn btn-danger" %>
+          <% else %>
+            <%= link_to "Ingresar", new_user_session_path , :class =>"btn btn-light"%>
+        <% end %>
+      </ul>  
+    </div>
   </nav> 
+  <body class="body-general">
     <%= yield %>
   </body>
 </html>
