--- a/app/views/laboratories/show.html.erb
+++ b/app/views/laboratories/show.html.erb
@@ -1,175 +1,83 @@
-<head>
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-</head>
+<div class="text-center">
+  <% if flash[:notice] %>
+    <div class="alert alert-success alert-dismissible fade show alert-top" role="alert">
+      <%= flash[:notice] %>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+  <% end %>
+</div>
 
-<p id="notice"><%= notice %></p>
 
-<h2>Registros:</h2>
-
-<body>
-
+  <h2>Registros:</h2>
   <h5><%=@laboratory.nombre%></h5>
-
   <%activos = 0%>
   <%inactivos = 0%>
-  <%@records_day.each do |record|%>
-    <%if record.tipo == 't'%>
-      <%activos+=1%>
-    <%else%>
-      <%inactivos+=1%>
-    <%end%>
+<%@records_day.each do |record|%>
+  <%if record.tipo == 't'%>
+    <%activos+=1%>
+  <%else%>
+    <%inactivos+=1%>
   <%end%>
+<%end%>
 
-  <div>
-    <%usuarios = activos-inactivos%>
-    <h5>Usuarios en laboratorio:
-    <%if usuarios < 0%>
-      <%= 0 %> <%="Redundancias de salidas"%></h4>
-    <%else%>
-      <%=activos-inactivos%></h5>
-    <%end%>
-  </div>
+<div>
+  <%usuarios = activos-inactivos%>
+  <h5>Usuarios en laboratorio:
+  <%if usuarios < 0%>
+    <%= 0 %> <%="Redundancias de salidas"%></h4>
+  <%else%>
+    <%=activos-inactivos%></h5>
+  <%end%>
+</div>
 
-  <div class="right">
-    <%= button_to "Descargar CSV", records_path(@records, format: :csv), method: :get, class: "btn btn-dark"%>
-  </div>
+<div class="right">
+  <%= button_to "Descargar CSV", records_path(@records, format: :csv), method: :get, class: "btn btn-dark"%>
+</div>
 
-  <ul class="nav nav-tabs" role= "tablist"> 
-    <li class="nav-item">
-      <a class ="nav-link active" id="today-tab" href=#today data-toggle="tab" role="tab"  aria-controls="today" aria-selected ="true">Hoy</a>
-    </li>
-    <li class="nav-item">
-      <a class ="nav-link" id="week-tab" href=#week data-toggle="tab" role="tab" aria-controls="week" aria-selected ="true">Semana</a>
-    </li>
-    <li class="nav-item">
-      <a class ="nav-link" id="month-tab" data-toggle="tab" href=#month  role="tab" aria-controls="month" aria-selected ="true">Mes</a>
-    </li>
-  </ul>
+<div class="tab-content">
+  <div class="tab-pane fade show active" id="today" role="tabpanel" aria-labelledby="today-tab">
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+        <th scope="col">Nombre</th>
+        <th scope="col">Fecha Registro</th>
+        <th scope="col">Hora Registro</th>
+        <th scope="col">Tipo</th>
+        <th scope="col">Autorizado</th>
+        </tr>
+      </thead>
 
-  <div class="tab-content">
-    <div class="tab-pane fade show active" id="today" role="tabpanel" aria-labelledby="today-tab">
-      <table class="table table-bordered">
-        <thead>
+      <tbody>
+        <%@records_day.each do |record|%>
           <tr>
-          <th scope="col">Nombre</th>
-          <th scope="col">Fecha Registro</th>
-          <th scope="col">Hora Registro</th>
-          <th scope="col">Tipo</th>
-          <th scope="col">Autorizado</th>
+            <td scope="row"><%=record.student.nombre%></td>
+            <td><%=record.created_at.to_s.split(' ')[0]%></td>
+            <td><%=record.created_at.to_s.split(' ')[1]%></td>
+            <%if record.tipo == 't'%>
+              <td><%='Ingreso'%></td>
+            <%else%>
+              <td><%='Salida'%></td>
+            <%end%>
+            <% if record.student.laboratories.ids.include?(@laboratory.id)%>
+              <td><i class="material-icons" style="font-size:28px;color:blue">check</i></td>
+            <%else%>
+              <td><i class="material-icons" style="font-size:28px;color:red">clear</i>
+              <form action="/students/enroll" method="post">
+                <div>
+                  <input id=<%=record.id%> name = 'student_id[]' value =<%=record.student.id%> type= 'checkbox'>
+                  <label for=<%=record.id%>> Autorizar </label></td>
+                </div>
+              </form>
+            <%end%>
           </tr>
-        </thead>
-
-        <tbody>
-          <%@records_day.each do |record|%>
-            <tr>
-              <td scope="row"><%=record.student.nombre%></td>
-              <td><%=record.created_at.to_s.split(' ')[0]%></td>
-              <td><%=record.created_at.to_s.split(' ')[1]%></td>
-              <%if record.tipo == 't'%>
-                <td><%='Ingreso'%></td>
-              <%else%>
-                <td><%='Salida'%></td>
-              <%end%>
-
-              <% if record.student.laboratories.ids.include?(@laboratory.id)%>
-                <td><i class="material-icons" style="font-size:28px;color:blue">check</i></td>
-              <%else%>
-                <td><i class="material-icons" style="font-size:28px;color:red">clear</i>
-                <form action="/students/enroll" method="post">
-                  <div>
-                    <input id=<%=record.id%> name = 'student_id[]' value =<%=record.student.id%> type= 'checkbox'>
-                    <label for=<%=record.id%>> Autorizar </label></td>
-                  </div>
-                </form>
-              <%end%>
-            </tr>
-          <%end%>
-        </tbody>
-      </table>  
-    </div>
+        <%end%>
+      </tbody>
+    </table>  
   </div>
-
-
-
-    <div class="tab-pane fade" id="week" role="tabpanel" aria-labelledby="week-tab">
-      <table class="table table-bordered">
-      <thead>
-      <tr>
-      <th scope="col">Nombre</th>
-      <th scope="col">Fecha Registro</th>
-      <th scope="col">Hora Registro</th>
-      <th scope="col">Tipo</th>
-      <th scope="col">Autorizado</th>
-      </tr>
-      </thead>
-      <tbody>
-      <%@records_week.each do |record|%>
-      <tr>
-      <td scope="row"><%=record.student.nombre%></td>
-      <td><%=record.created_at.to_s.split(' ')[0]%></td>
-      <td><%=record.created_at.to_s.split(' ')[1]%></td>
-      <%if record.tipo == 't'%>
-      <td><%='Ingreso'%></td>
-      <%else%>
-      <td><%='Salida'%></td>
-      <%end%>
-       <% if record.student.laboratories.ids.include?(@laboratory.id)%>
-        <td><i class="material-icons" style="font-size:28px;color:blue">check</i></td>
-      <%else%>
-        <td><i class="material-icons" style="font-size:28px;color:red">clear</i>
-        <form action="/students/enroll" method="post">
-        <div>
-        <input id=<%=record.id%> name = 'student_id[]' value =<%=record.student.id%> type= 'checkbox'>
-        <label for=<%=record.id%>> Autorizar </label></td>
-        </div>
-      </tr>
-      <%end%>
-      <%end%>
-      </table> 
-      </tbody>
-      </div>
-
-
-
-    <div class="tab-pane fade" id="month" role="tabpanel" aria-labelledby="month-tab">
-      <table class="table table-bordered">
-      <thead>
-      <tr>
-      <th scope="col">Nombre</th>
-      <th scope="col">Fecha Registro</th>
-      <th scope="col">Hora Registro</th>
-      <th scope="col">Tipo</th>
-      <th scope="col">Autorizado</th>
-      </tr>
-      </thead>
-      <tbody>
-      <%@records_month.each do |record|%>
-      <tr>
-      <td scope="row"><%=record.student.nombre%></td>
-      <td><%=record.created_at.to_s.split(' ')[0]%></td>
-      <td><%=record.created_at.to_s.split(' ')[1]%></td>
-      <%if record.tipo == 't'%>
-      <td><%='Ingreso'%></td>
-      <%else%>
-      <td><%='Salida'%></td>
-       <%end%>
-       <% if record.student.laboratories.ids.include?(@laboratory.id)%>
-        <td><i class="material-icons" style="font-size:28px;color:blue">check</i></td>
-      <%else%>
-        <td><i class="material-icons" style="font-size:28px;color:red">clear</i>
-        <form action="/students/enroll" method="post">
-        <div>
-        <input id=<%=record.id%> name = 'student_id[]' value =<%=record.student.id%> type= 'checkbox'>
-        <label for=<%=record.id%>> Autorizar </label></td>
-        </div>
-      </tr>
-      <%end%>
-      <%end%>
-      </table> 
-      </tbody>
-      </div>
+</div>
   <div class="right">
     <input type = 'submit' value = 'Autorizar' class="btn btn-primary">
   </div>
-</body>
 <%= link_to 'Back', laboratories_path %>
