--- a/app/views/flayers/new.html.erb
+++ b/app/views/flayers/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Flayer</h1>
+<div class="light-title">
+    Nuevo afiche
+    <hr/>
+</div>
 
 <%= render 'form', flayer: @flayer %>
 
-<%= link_to 'Back', flayers_path %>
+
