--- a/app/assets/stylesheets/laboratories.scss
+++ b/app/assets/stylesheets/laboratories.scss
@@ -1,3 +1,87 @@
 // Place all the styles related to the Laboratories controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.header-container{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+.lab-title{
+   text-align: center;
+   font-size: 40px;
+   font-weight: 200;
+   margin-top: 1rem;
+}
+
+.light-title{
+    font-size: 40px;
+    font-weight: 200;
+    margin-top: 3rem;
+}
+
+.ocupacity-box{
+    border: 1px solid black;
+    text-align: center;
+    width: 30%;
+    margin: 10px auto 0;
+    box-shadow: 2px 1px 3px grey;
+    padding: 1% 0 0 0;
+    font-weight: 200;
+    color: black;
+}
+
+.student-form{
+    border-radius: 3px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 60%;
+    padding: 1%;
+}
+
+.btn-fill{
+    width: 80%;
+    margin: 1rem auto;
+}
+
+.form-box{
+    box-shadow: 0px 0px 4px grey;
+    flex-direction: row;
+    padding: 2%;
+    width: 70%;
+    border-radius: 4px;
+}
+
+.column-flex-div{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 1rem;
+}
+.row-flex-div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 1rem;
+}
+
+.label-form{
+    margin: 1rem 0 0;
+    font-size: 12px;
+}
+.input-form{
+    width: 100%;
+    padding: 1%;
+    font-size: 13px;
+    border-radius: 6px;
+    border: 1px solid rgb(173, 173, 173);
+}
+
+.lil-title{
+    font-size: 17px;
+    color: rgb(32, 32, 32);
+}
