--- a/app/views/flayers/index.html.erb
+++ b/app/views/flayers/index.html.erb
@@ -1,6 +1,8 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Flayers</h1>
+<div class="light-title">
+    Afiches
+    <hr/>
+</div>
 <body>
 <table class="table">
   <thead>
@@ -23,6 +25,6 @@
 
 <br>
 
-<%= link_to 'Crear nuevo flayer', new_flayer_path %>
+<%= link_to 'Crear nuevo flayer', new_flayer_path, class: "btn btn-primary"%>
 
 </body>
