--- a/app/views/laboratories/show.html.erb
+++ b/app/views/laboratories/show.html.erb
@@ -1,83 +1,97 @@
 <div class="text-center">
-  <% if flash[:notice] %>
+    <% if flash[:notice] %>
     <div class="alert alert-success alert-dismissible fade show alert-top" role="alert">
-      <%= flash[:notice] %>
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-      </button>
+        <%= flash[:notice] %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
     </div>
-  <% end %>
+    <% end %>
 </div>
 
 
-  <h2>Registros:</h2>
-  <h5><%=@laboratory.nombre%></h5>
-  <%activos = 0%>
-  <%inactivos = 0%>
+ 
+<%activos = 0%>
+<%inactivos = 0%>
 <%@records_day.each do |record|%>
-  <%if record.tipo == 't'%>
-    <%activos+=1%>
-  <%else%>
+    <%if record.tipo == 't'%>
+        <%activos+=1%>
+    <%else%>
     <%inactivos+=1%>
-  <%end%>
-<%end%>
+    <%end%>
+<%end%> 
+<%usuarios = activos-inactivos%>
 
-<div>
-  <%usuarios = activos-inactivos%>
-  <h5>Usuarios en laboratorio:
-  <%if usuarios < 0%>
-    <%= 0 %> <%="Redundancias de salidas"%></h4>
-  <%else%>
-    <%=activos-inactivos%></h5>
-  <%end%>
+
+<div class="lab-title">
+    <%=@laboratory.nombre%>
 </div>
+
+<div class="ocupacity-box">
+<p>Ocupación laboratorio:</p>
+<p><%=Time.now.strftime("%d/%m/%Y %H:%M")%><p>
+<p> <%if usuarios < 0%>
+        0 Redundancias de salidas.
+    <%else%>
+        <%=usuarios%> Personas.
+    <%end%><p>
+</div>
+
+<div class="light-title">
+    Registros:
+    <hr/>
+</div>
+<%= link_to "Registros anteriores", previous_records_path(id: @laboratory.id) %>
 
 <div class="right">
-  <%= button_to "Descargar CSV", records_path(@records, format: :csv), method: :get, class: "btn btn-dark"%>
+    <%= button_to "Descargar CSV", records_path(@records, format: :csv), method: :get, class: "btn btn-dark"%>
 </div>
 
 <div class="tab-content">
-  <div class="tab-pane fade show active" id="today" role="tabpanel" aria-labelledby="today-tab">
-    <table class="table table-bordered">
-      <thead>
-        <tr>
-        <th scope="col">Nombre</th>
-        <th scope="col">Fecha Registro</th>
-        <th scope="col">Hora Registro</th>
-        <th scope="col">Tipo</th>
-        <th scope="col">Autorizado</th>
-        </tr>
-      </thead>
+    <div class="tab-pane fade show active" id="today" role="tabpanel" aria-labelledby="today-tab">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Fecha Registro</th>
+                    <th scope="col">Hora Registro</th>
+                    <th scope="col">Tipo</th>
+                    <th scope="col">Autorizado</th>
+                </tr>
+            </thead>
 
-      <tbody>
-        <%@records_day.each do |record|%>
-          <tr>
-            <td scope="row"><%=record.student.nombre%></td>
-            <td><%=record.created_at.to_s.split(' ')[0]%></td>
-            <td><%=record.created_at.to_s.split(' ')[1]%></td>
-            <%if record.tipo == 't'%>
-              <td><%='Ingreso'%></td>
-            <%else%>
-              <td><%='Salida'%></td>
-            <%end%>
-            <% if record.student.laboratories.ids.include?(@laboratory.id)%>
-              <td><i class="material-icons" style="font-size:28px;color:blue">check</i></td>
-            <%else%>
-              <td><i class="material-icons" style="font-size:28px;color:red">clear</i>
-              <form action="/students/enroll" method="post">
-                <div>
-                  <input id=<%=record.id%> name = 'student_id[]' value =<%=record.student.id%> type= 'checkbox'>
-                  <label for=<%=record.id%>> Autorizar </label></td>
-                </div>
-              </form>
-            <%end%>
-          </tr>
-        <%end%>
-      </tbody>
-    </table>  
-  </div>
+            <tbody>
+                <%@records_day.each do |record|%>
+                <tr>
+                    <td scope="row"><%=record.student.nombre%></td>
+                    <td><%=record.created_at.to_s.split(' ')[0]%></td>
+                    <td><%=record.created_at.to_s.split(' ')[1]%></td>
+                    <%if record.tipo == 't'%>
+                        <td>Ingreso</td>
+                    <%else%>
+                        <td>Salida</td>
+                    <%end%>
+                    <% if record.student.laboratories.ids.include?(@laboratory.id)%>
+                        <td><i class="material-icons" style="font-size:28px;color:blue">check</i></td>
+                         <td>Estudiante Autorizado</td>
+                    <%else%>
+                        <td><i class="material-icons" style="font-size:28px;color:red">clear</i></td>
+                         <td>
+                        <form action="/students/enroll" method="post" id="auth-student">
+                            <input id=<%=record.id%> name='student_id[]' value=<%=record.student.id%> type='checkbox'>
+                            <label for=<%=record.id%>> Autorizar </label>
+                        </form>
+                    </td>
+                    <%end%>
+                </tr>
+                <%end%>
+            </tbody>
+        </table>
+    </div>
 </div>
-  <div class="right">
-    <input type = 'submit' value = 'Autorizar' class="btn btn-primary">
-  </div>
-<%= link_to 'Back', laboratories_path %>
+<hr>
+<div class="right">
+    <button form="auth-student" type='submit'class="btn btn-primary"> Autorizar uso laboratorio </button>
+</div>
+
+<%= link_to 'Atrás', laboratories_path , class: "btn btn-secondary"%>
