--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -2,49 +2,53 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
-<h2>Estudiantes:</h2>
-
 <div class="container">
-<% if flash[:notice]%>
-<div class="alert alert-danger">
-  <a class="close" data-dismiss="alert" aria-label="close">&times;</a>
- <strong><%= flash[:notice] %></strong> 
+  <% if flash[:notice]%>
+    <div class="alert alert-primary">
+      <a class="close" data-dismiss="alert" aria-label="close">&times;</a>
+      <strong><%= flash[:notice] %></strong> 
+    </div>
   <% end %>
 </div>
 
+<div class="light-title">
+  Estudiantes
+  <hr/>
+</div>
+
 <div style="padding-bottom:20px">
-<div class="input-group-prepend">
+  <div class="input-group-prepend">
     <span class="input-group-text cyan lighten-2" id="basic-text1"><i class="fa fa-search" aria-hidden="true"></i></span>
-<input class="form-control form-control-sm ml-3 w-75" id="student-search" type="text" placeholder="Buscar en taba">
+    <input class="form-control form-control-sm ml-3 w-75" id="student-search" type="text" placeholder="Buscar en taba">
+  </div>
 </div>
-</div>
-<body>
- <table class="table">
+<table class="table">
   <thead>
     <tr>
     <th scope="col">Nombre</th>
     <th scope="col">Correo UC</th>
     <th scope="col">Laboratorios Autorizados</th>
     </tr>
-    </thead>
-    <tbody id="students-table">
+  </thead>
+  <tbody id="students-table">
     <%@students.each do |student|%>
-    <tr>
-    <td scope="row"><%=link_to student.nombre, student%></td>
-    <td><%=student.correo%></td>
-    <%student.laboratories.each do |lab|%>
-    <td><%=lab.nombre%></td>
+      <tr>
+        <td scope="row"><%=link_to student.nombre, student%></td>
+        <td><%=student.correo%></td>
+        <%student.laboratories.each do |lab|%>
+          <td><%=lab.nombre%></td>
+        <%end%>
+      </tr>
     <%end%>
-    <%end%>
-    </tr>
-    </tbody>
-    </table>  
+  </tbody>
+</table>  
 
+<hr/>
 <div>
-<%= form_tag import_students_path, multipart: true do%>
-<%= file_field_tag :file%>
-<%= submit_tag 'Cargar Datos', class: "btn btn-primary"%>
-<%end%>
+  <%= form_tag import_students_path, multipart: true do%>
+    <%= file_field_tag :file%>
+    <%= submit_tag 'Cargar Datos', class: "btn btn-primary"%>
+  <%end%>
 </div>
 </body>
 
